Revert some changes + unfuzzy

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -243,9 +243,9 @@ During this Scenario:
 
   \medskip
 
-  \textit{Rust Dragons are known to hunt Gorgons, and live and feed in sulfur Mines.
+  \textit{Rust Dragons are known to hunt Gorgons, and live and feed in sulfur mines.
     With this appetite, Rust Dragons spew a concentrated acid as their primary attack.
-    This acid is capable of eating through the strongest armor, lowering the Defense of its target while inflicting further damage.
+    This acid is capable of eating through the strongest armor, lowering the defense of its target while inflicting further damage.
   }
 
   \medskip
