--- a/translations/inferno_devilish_plan.tex/fr.po
+++ b/translations/inferno_devilish_plan.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-07-04 10:47+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -30,10 +30,45 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:16 clash/dragoncurse_castle.tex:17
+#: campaigns/inferno_devilish_plan.tex:18
+#: campaigns/inferno_steadwicks_fall.tex:16
+#: campaigns/inferno_deal_with_the_devil.tex:20
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Scenario Length}}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Player Setup}}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
+#: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Map Setup}}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
 #: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
 #, no-wrap
 msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
 
@@ -72,13 +107,13 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/titans_stronghold.tex:21 coops/emerald_island.tex:18
-#: campaigns/inferno_devilish_plan.tex:22
-#: campaigns/inferno_steadwicks_fall.tex:20
-#: campaigns/inferno_deal_with_the_devil.tex:24
+#: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: campaigns/inferno_devilish_plan.tex:148
+#: campaigns/inferno_steadwicks_fall.tex:193
+#: campaigns/inferno_deal_with_the_devil.tex:173
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{Player setup}}\n"
+"\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
 
@@ -139,20 +174,10 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:18
-#: campaigns/inferno_steadwicks_fall.tex:16
-#: campaigns/inferno_deal_with_the_devil.tex:20
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Scenario length}}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:20
 #, no-wrap
 msgid ""
-"This scenario plays out over 13 rounds.\n"
+"This Scenario plays out over 13 Rounds.\n"
 "\n"
 msgstr ""
 
@@ -212,7 +237,7 @@ msgstr ""
 msgid ""
 "\\textbf{Bonus:} Choose one of the following options:\n"
 "\\begin{itemize}\n"
-"  \\item Add a ``Slayer'' spell to your hand\n"
+"  \\item Add a ``Slayer'' Spell to your hand\n"
 "  \\item Add the ``Armor of Wonder'' Artifact to your hand\n"
 "  \\item Reinforce Magogs and gain 1 \\svg{valuables}\n"
 "\\end{itemize}\n"
@@ -225,7 +250,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:46
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{AI hero setup}}\n"
+"\\subsection*{\\MakeUppercase{AI Hero Setup}}\n"
 "\n"
 msgstr ""
 
@@ -251,7 +276,7 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Gold Dragon Army:} A Pack of Gold Dragons, a Pack of Unicorns, a Pack of Dendroids, a Pack of Centaurs\n"
-"  \\item \\textbf{Ivor's Army:} A Few Elves\\footnote{In Round 9, the Few Elves in Ivor's Army are reinforced to a Pack of Elves.}, Neutral Army at the same level as your Hero level\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
+"  \\item \\textbf{Ivor's Army:} A Few Elves\\footnote{In Round 9, the Few Elves in Ivor's Army are Reinforced to a Pack of Elves.}, Neutral Army at the same Level as your Hero Level\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -268,7 +293,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:61
 #, no-wrap
 msgid ""
-"\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
+"\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} Unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
 "\n"
 msgstr ""
 
@@ -281,20 +306,10 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:65
-#: campaigns/inferno_steadwicks_fall.tex:70
-#: campaigns/inferno_deal_with_the_devil.tex:77
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Map setup}}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:73
 #, no-wrap
 msgid ""
-"\\textbf{2 × Starting (I) Map tile}\n"
+"\\textbf{2 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Inferno (S6)\n"
 "  \\item 1 × Rampart (S4)\n"
@@ -306,7 +321,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:79
 #, no-wrap
 msgid ""
-"\\textbf{3 × Far (II--III) Map tile}\n"
+"\\textbf{3 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item \\mbox{2 × Inferno (choose from: F16--F18, \\#F10)}\n"
 "  \\item 1 × Rampart (choose from: F10--F12)\n"
@@ -318,7 +333,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:84
 #, no-wrap
 msgid ""
-"\\textbf{2 × Near (IV--V) Map tile}\n"
+"\\textbf{2 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Rampart (N7, N8)\n"
 "\\end{itemize}\n"
@@ -329,9 +344,9 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:89
 #, no-wrap
 msgid ""
-"\\textbf{1 × Center (VI--VII) Map tile}\n"
+"\\textbf{1 × Center (VI--VII) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Dragon Utopia Center Map tile (C1)\n"
+"  \\item 1 × Dragon Utopia Center Map Tile (C1)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -342,7 +357,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:100
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{Heroes placement}}\n"
+"\\subsection*{\\MakeUppercase{Heroes Placement}}\n"
 "\n"
 msgstr ""
 
@@ -350,8 +365,8 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:94
 #, no-wrap
 msgid ""
-"The Enemy Hero is represented by one Rampart faction Hero model of your choice\n"
-"and appears in the center field of the S4 Starting Map tile.\n"
+"The Enemy Hero is represented by one Rampart Faction Hero model of your choice\n"
+"and appears in the center Field of the S4 Starting Map Tile.\n"
 "\n"
 msgstr ""
 
@@ -359,7 +374,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:96
 #, no-wrap
 msgid ""
-"Place your Hero in the center field of the Inferno Starting Map tile.\n"
+"Place your Hero in the center Field of the Inferno Starting Map Tile.\n"
 "\n"
 msgstr ""
 
@@ -444,7 +459,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{13} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item At the end of the round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
+"  \\item At the end of the Round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -453,20 +468,10 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:145
 #, no-wrap
 msgid ""
-"\\textbf{When you complete the scenario:}\n"
+"\\textbf{When you complete the Scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item Read: ``Congratulations! You have completed your quest to kill the fearsome beast, and can claim victory!''\n"
 "\\end{itemize}\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:148
-#: campaigns/inferno_steadwicks_fall.tex:193
-#: campaigns/inferno_deal_with_the_devil.tex:173
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Additional rules}}\n"
 "\n"
 msgstr ""
 
@@ -476,7 +481,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:175
 #, no-wrap
 msgid ""
-"During this ``Inferno'' campaign scenario, the following rules apply:\n"
+"During this ``Inferno'' Campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
 
@@ -487,10 +492,10 @@ msgid ""
 "\\begin{itemize}\n"
 "    \\item Your Hero does not gain Experience past Level 5.\n"
 "    \\item The Enemy Hero does not move and only waits in their Town. They start with Walls and a Gate on their side of the Combat Board.\n"
-"    \\item The N7 Map tile cannot be entered until Ivor is defeated.\n"
+"    \\item The N7 Map Tile cannot be entered until Ivor is defeated.\n"
 "    \\item At the Dragon Utopia location, your Hero fights the Gold Dragons Army.\n"
 "    \\item The ``Castle Gate'' cannot be built.\n"
-"    \\item If your Hero visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.\n"
+"    \\item If your Hero Visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
