--- a/translations/recommendations.tex/fr.po
+++ b/translations/recommendations.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-07-28 15:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -84,7 +84,7 @@ msgid ""
 "Where:\n"
 "\\begin{itemize}\n"
 "  \\item[$\\textbf{P}$] -- number of players\n"
-"  \\item[$\\textbf{R}$] -- number of rounds\n"
+"  \\item[$\\textbf{R}$] -- number of Rounds\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -93,7 +93,7 @@ msgstr ""
 #: sections/recommendations.tex:27
 #, no-wrap
 msgid ""
-"For example, if you're playing a 3-player scenario consisting of 12 rounds, you can easily calculate that $3 \\times 12 \\times 5 = 180$.\n"
+"For example, if you're playing a 3-player Scenario consisting of 12 Rounds, you can easily calculate that $3 \\times 12 \\times 5 = 180$.\n"
 "Your expected minimal play time would be around 3 hours.\n"
 "\n"
 msgstr ""
@@ -119,8 +119,8 @@ msgstr ""
 #: sections/recommendations.tex:35
 #, no-wrap
 msgid ""
-"Except for the Magic Arrow, each spell appears exactly twice in the spell deck.\n"
-"After players prepare their starting M\\&M decks, it is recommended to remove Magic Arrows from the spell deck until no more than two remain.\n"
+"Except for the Magic Arrow, each Spell appears exactly twice in the Spell deck.\n"
+"After players prepare their starting M\\&M decks, it is recommended to remove Magic Arrows from the Spell deck until no more than two remain.\n"
 "\n"
 msgstr ""
 
@@ -136,7 +136,7 @@ msgstr ""
 #: sections/recommendations.tex:39
 #, no-wrap
 msgid ""
-"Although rules as written state that you can remove only one card from your hand while visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
+"Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
 "\n"
 msgstr ""
 
@@ -160,7 +160,7 @@ msgstr ""
 #: sections/recommendations.tex:45
 #, no-wrap
 msgid ""
-"During combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle board, the player positioning the Neutral Units must do the same.\n"
+"During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
 
@@ -223,7 +223,7 @@ msgid ""
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_ranged_bad.png}\n"
-"    \\caption[ranged protected]{\\textit{The Boars must occupy one of the green fields.}}\n"
+"    \\caption[ranged protected]{\\textit{The Boars must occupy one of the green Fields.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\mbox{}"
@@ -241,7 +241,7 @@ msgstr ""
 #: sections/recommendations.tex:100
 #, no-wrap
 msgid ""
-"The following are not custom rules but rather recommendations to help you get the most out of your game:\n"
+"The following are not custom rules, but rather recommendations to help you get the most out of your game:\n"
 "\n"
 msgstr ""
 
@@ -250,10 +250,10 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item When deciding which building to construct in your town, especially in the early game, it is \\textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other faction-specific buildings.\n"
+"  \\item When deciding which building to construct in your Town, especially in the early game, it is \\textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other Faction-specific buildings.\n"
 "  \\item If you're unsure which Spell, Artifact, or Ability to choose, prioritize those that help you cycle through your deck.\n"
-"    This includes any cards that allow you to draw cards or retrieve cards from your discard pile.\n"
-"  \\item Try to avoid using your Main Hero's movement points for actions that your Secondary Hero can handle, such as flipping the Map tiles, visiting Water Wheels, and so on.\n"
+"    This includes any cards that allow you to draw cards or retrieve cards from your Discard Pile.\n"
+"  \\item Try to avoid using your Main Hero's Movement Points for Actions that your Secondary Hero can handle, such as flipping the Map Tiles, Visiting Water Wheels, and so on.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
