--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-07-28 15:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -98,14 +98,14 @@ msgid ""
 "Where:\n"
 "\\begin{itemize}\n"
 "  \\item[$\\textbf{P}$] -- number of players\n"
-"  \\item[$\\textbf{R}$] -- number of rounds\n"
+"  \\item[$\\textbf{R}$] -- number of Rounds\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "Gdzie:\n"
 "\\begin{itemize}\n"
 "  \\item[$\\textbf{G}$] -- liczba graczy\n"
-"  \\item[$\\textbf{R}$] -- liczba rund\n"
+"  \\item[$\\textbf{R}$] -- liczba Rund\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -113,11 +113,11 @@ msgstr ""
 #: sections/recommendations.tex:27
 #, no-wrap
 msgid ""
-"For example, if you're playing a 3-player scenario consisting of 12 rounds, you can easily calculate that $3 \\times 12 \\times 5 = 180$.\n"
+"For example, if you're playing a 3-player Scenario consisting of 12 Rounds, you can easily calculate that $3 \\times 12 \\times 5 = 180$.\n"
 "Your expected minimal play time would be around 3 hours.\n"
 "\n"
 msgstr ""
-"Dla przykładu, jeśli grasz w scenariusz dla 3 graczy składający się z 12 rund, możesz łatwo obliczyć, że $3 \\times 12 \\times 5 = 180$.\n"
+"Dla przykładu, jeśli grasz w Scenariusz dla 3 graczy składający się z 12 Rund, możesz łatwo obliczyć, że $3 \\times 12 \\times 5 = 180$.\n"
 "Twój przewidywany minimalny czas gry wyniesie około 3 godzin.\n"
 "\n"
 
@@ -147,12 +147,12 @@ msgstr ""
 #: sections/recommendations.tex:35
 #, no-wrap
 msgid ""
-"Except for the Magic Arrow, each spell appears exactly twice in the spell deck.\n"
-"After players prepare their starting M\\&M decks, it is recommended to remove Magic Arrows from the spell deck until no more than two remain.\n"
+"Except for the Magic Arrow, each Spell appears exactly twice in the Spell deck.\n"
+"After players prepare their starting M\\&M decks, it is recommended to remove Magic Arrows from the Spell deck until no more than two remain.\n"
 "\n"
 msgstr ""
-"Z wyjątkiem Magicznej Strzały każde zaklęcie pojawia się dokładnie dwa razy w talii zaklęć.\n"
-"Po przygotowaniu początkowych talii M\\&M przez graczy, zaleca się usunięcie Magicznych Strzał z talii zaklęć, aż pozostaną nie więcej niż dwie.\n"
+"Z wyjątkiem Magicznej Strzały każde zaklęcie pojawia się dokładnie dwa razy w Talii Zaklęć.\n"
+"Po przygotowaniu początkowych talii M\\&M przez graczy, zaleca się usunięcie Magicznych Strzał z Talii Zaklęć, aż pozostaną nie więcej niż dwie.\n"
 "\n"
 
 #. type: multicols
@@ -169,7 +169,7 @@ msgstr ""
 #: sections/recommendations.tex:39
 #, no-wrap
 msgid ""
-"Although rules as written state that you can remove only one card from your hand while visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
+"Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
 "\n"
 msgstr ""
 "Mimo że zasady mówią, że możesz usunąć tylko jedną kartę z ręki podczas odwiedzania Punktu Handlowego, zaleca się pozwolić na usunięcie tylu kart, ile chcesz.\n"
@@ -197,10 +197,10 @@ msgstr ""
 #: sections/recommendations.tex:45
 #, no-wrap
 msgid ""
-"During combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle board, the player positioning the Neutral Units must do the same.\n"
+"During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
-"Podczas walki z Jednostkami Neutralnymi w trybie starcia, jeśli gracz zdecyduje się rozmieścić swoje Jednostki tylko na jednej połowie (lewej lub prawej) planszy walki, gracz rozmieszczający Jednostki Neutralne musi postąpić tak samo.\n"
+"Podczas walki z Jednostkami Neutralnymi w trybie starcia, jeśli gracz zdecyduje się rozmieścić swoje Jednostki tylko na jednej połowie (lewej lub prawej) Planszy Walki, gracz rozmieszczający Jednostki Neutralne musi postąpić tak samo.\n"
 "\n"
 
 #. type: multicols
@@ -283,7 +283,7 @@ msgid ""
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_ranged_bad.png}\n"
-"    \\caption[ranged protected]{\\textit{The Boars must occupy one of the green fields.}}\n"
+"    \\caption[ranged protected]{\\textit{The Boars must occupy one of the green Fields.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\mbox{}"
@@ -300,7 +300,7 @@ msgstr ""
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_ranged_bad.png}\n"
-"    \\caption[ranged protected]{\\textit{Dziki muszą zająć jedno z zielonych pól.}}\n"
+"    \\caption[ranged protected]{\\textit{Dziki muszą zająć jedno z zielonych Pól.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\mbox{}"
@@ -319,7 +319,7 @@ msgstr ""
 #: sections/recommendations.tex:100
 #, no-wrap
 msgid ""
-"The following are not custom rules but rather recommendations to help you get the most out of your game:\n"
+"The following are not custom rules, but rather recommendations to help you get the most out of your game:\n"
 "\n"
 msgstr ""
 "Poniższe zalecenia nie są zasadami niestandardowymi, lecz mają na celu maksymalne wykorzystanie potencjału gry:\n"
@@ -330,15 +330,15 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item When deciding which building to construct in your town, especially in the early game, it is \\textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other faction-specific buildings.\n"
+"  \\item When deciding which building to construct in your Town, especially in the early game, it is \\textit{usually} best to prioritize Units over the City Hall, Citadel, Mage Guild, or other Faction-specific buildings.\n"
 "  \\item If you're unsure which Spell, Artifact, or Ability to choose, prioritize those that help you cycle through your deck.\n"
-"    This includes any cards that allow you to draw cards or retrieve cards from your discard pile.\n"
-"  \\item Try to avoid using your Main Hero's movement points for actions that your Secondary Hero can handle, such as flipping the Map tiles, visiting Water Wheels, and so on.\n"
+"    This includes any cards that allow you to draw cards or retrieve cards from your Discard Pile.\n"
+"  \\item Try to avoid using your Main Hero's Movement Points for Actions that your Secondary Hero can handle, such as flipping the Map Tiles, Visiting Water Wheels, and so on.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Decydując, który budynek wybudować w swoim mieście, szczególnie na początku gry, \\textit{zazwyczaj} najlepiej jest priorytetowo traktować Jednostki ponad Ratusz, Cytadelę, Gildię Magów lub inne budynki specyficzne dla frakcji.\n"
+"  \\item Decydując, który budynek wybudować w swoim Mieście, szczególnie na początku gry, \\textit{zazwyczaj} najlepiej jest priorytetowo traktować Jednostki ponad Ratusz, Cytadelę, Gildię Magów lub inne budynki specyficzne dla frakcji.\n"
 "  \\item Jeśli nie jesteś pewien, które Zaklęcie, Artefakt lub Zdolność wybrać, priorytetowo traktuj te, które pomagają w przeszukiwaniu talii.\n"
 "    Obejmuje to karty, które pozwalają ci dobierać karty lub odzyskiwać karty ze stosu kart odrzuconych.\n"
 "  \\item Staraj się unikać zużywania Punktów Ruchu Bohatera Głównego na akcje, które może wykonać Bohater Pomocniczy, takie jak obracanie Kafelków Mapy, odwiedzanie Młynów Wodnych i tym podobne.\n"
