--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-07 17:45+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -76,6 +76,9 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:16 clash/dragoncurse_castle.tex:17
+#: campaigns/inferno_devilish_plan.tex:18
+#: campaigns/inferno_steadwicks_fall.tex:16
+#: campaigns/inferno_deal_with_the_devil.tex:20
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
@@ -86,16 +89,23 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:18
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "This scenario is played over 12 rounds.\n"
+#| "\n"
 msgid ""
-"This scenario is played over 12 rounds.\n"
+"This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
 "Tento scénář se hraje na 12 kol.\n"
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:20 clash/dragoncurse_castle.tex:21
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
@@ -134,14 +144,14 @@ msgstr ""
 "\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
-#. type: multicols
-#: coops/sentinels.tex:32
-#, no-wrap
+#. type: multicols*
+#: coops/sentinels.tex:32 clash/the_hunt.tex:29
+#, fuzzy, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svgunit{bronze} units with the \\textit{lowest} recruitment cost\n"
-"  \\item A Few \\svgunit{bronze} units with the \\textit{highest} recruitment cost\n"
+"  \\item A Pack of \\svgunit{bronze} Units with the \\textit{lowest} Recruitment cost\n"
+"  \\item A Few \\svgunit{bronze} Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -164,9 +174,12 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:36
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Map tile Pool:} Each player takes 1 random Near (IV--V) Map tile and 1 random Far (II--III) Map tile. These tiles should not contain any Obelisks.\n"
+#| "\n"
 msgid ""
-"\\textbf{Map tile Pool:} Each player takes 1 random Near (IV--V) Map tile and 1 random Far (II--III) Map tile. These tiles should not contain any Obelisks.\n"
+"\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
 "\\textbf{Dílky Mapy na ruce:} Každý hráč si vezme 1 náhodný Blízký (IV--V) Dílek Mapy a 1 náhodný Vzdálený (II--III) Dílek Mapy. Tyto dílky by neměly obsahovat žádné Obelisky.\n"
@@ -185,6 +198,9 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
 #: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
@@ -195,9 +211,9 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
 "Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
@@ -205,11 +221,18 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:48
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{2 × Starting (I) Map tile}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Starting Tiles of your chosen factions\n"
+#| "  \\item Ignore their yellow borders\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
-"\\textbf{2 × Starting (I) Map tile}\n"
+"\\textbf{2 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item Starting Tiles of your chosen factions\n"
+"  \\item Starting Tiles of your chosen Factions\n"
 "  \\item Ignore their yellow borders\n"
 "\\end{itemize}\n"
 "\n"
@@ -223,9 +246,12 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:50
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{4 × Far (II--III) Map tile}\n"
+#| "\n"
 msgid ""
-"\\textbf{4 × Far (II--III) Map tile}\n"
+"\\textbf{4 × Far (II--III) Map Tile}\n"
 "\n"
 msgstr ""
 "\\textbf{4 × Vzdálený (II--III) Dílek Mapy}\n"
@@ -233,11 +259,17 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:55
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{4 × Near (IV--V) Map tile}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item All Near Map tiles must have Obelisks\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
-"\\textbf{4 × Near (IV--V) Map tile}\n"
+"\\textbf{4 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item All Near Map tiles must have Obelisks\n"
+"  \\item All Near Map Tiles must have Obelisks\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -295,9 +327,12 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:65
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "One of your towns is captured, or a main hero is defeated in a battle (retreat doesn't count).\n"
+#| "\n"
 msgid ""
-"One of your towns is captured, or a main hero is defeated in a battle (retreat doesn't count).\n"
+"One of your Towns is captured, or a Main Hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
 msgstr ""
 "Jedno z vašich Měst je dobyto, nebo hlavní Hrdina je poražen v bitvě (ústup se nepočítá).\n"
@@ -387,6 +422,9 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: campaigns/inferno_devilish_plan.tex:148
+#: campaigns/inferno_steadwicks_fall.tex:193
+#: campaigns/inferno_deal_with_the_devil.tex:173
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -397,11 +435,23 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:102
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.\n"
+#| "  \\item The hero who defeats an enemy army gains 2 \\svg{experience}.\n"
+#| "    The victorious player rolls two Treasure Dice and resolves one of them.\n"
+#| "  \\item Additionally, no player can:\n"
+#| "  \\begin{itemize}\n"
+#| "      \\item Attack other Heroes.\n"
+#| "      \\item Capture a Mine or Settlement that is already Flagged.\n"
+#| "  \\end{itemize}\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.\n"
-"  \\item The hero who defeats an enemy army gains 2 \\svg{experience}.\n"
+"  \\item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied hero.\n"
+"  \\item The Hero who defeats an enemy army gains 2 \\svg{experience}.\n"
 "    The victorious player rolls two Treasure Dice and resolves one of them.\n"
 "  \\item Additionally, no player can:\n"
 "  \\begin{itemize}\n"
@@ -435,11 +485,32 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:124
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).\n"
+#| "  \\item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
+#| "  \\begin{itemize}\n"
+#| "    \\item $+1$/$+1$ = North\n"
+#| "    \\item $+1$/$-1$ = East\n"
+#| "    \\item $-1$/$+1$ = West\n"
+#| "    \\item $-1$/$-1$ = South\n"
+#| "  \\end{itemize}\n"
+#| "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
+#| "  Rounds 8 and 10 are entirely random.\n"
+#| "  \\item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
+#| "  \\item If there is a hero on the field where the enemy spawns, a fight starts immediately.\n"
+#| "  \\item Enemy armies move at the end of every turn, starting with the turn they spawned.\n"
+#| "  \\item Enemy armies have 3 MPs per round.\n"
+#| "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
+#| "    Place Black cubes on any field they pass through, treating those fields as empty from that point on.\n"
+#| "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).\n"
-"  \\item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
+"  \\item Enemy armies spawn on a random Obelisk Field (use Hero miniatures from Factions not in play).\n"
+"  \\item Determine which Obelisk Field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = North\n"
 "    \\item $+1$/$-1$ = East\n"
@@ -449,11 +520,11 @@ msgid ""
 "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
 "  Rounds 8 and 10 are entirely random.\n"
 "  \\item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
-"  \\item If there is a hero on the field where the enemy spawns, a fight starts immediately.\n"
-"  \\item Enemy armies move at the end of every turn, starting with the turn they spawned.\n"
-"  \\item Enemy armies have 3 MPs per round.\n"
+"  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
+"  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
+"  \\item Enemy armies have 3 MPs per Round.\n"
 "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-"    Place Black cubes on any field they pass through, treating those fields as empty from that point on.\n"
+"    Place Black cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
 "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
 "\\end{itemize}\n"
 "\n"
@@ -491,14 +562,23 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:134
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item Fighting enemy armies over more than one Combat Round does not cost Movement Points.\n"
+#| "  \\item During a battle with an enemy army, a hero can retreat whenever a friendly unit is about to activate.\n"
+#| "    A retreating main Hero loses all remaining MPs and is returned to an allied town or settlement of their choice, keeping all remaining units.\n"
+#| "  \\item Retreating secondary heroes are removed from the game, but their remaining units are kept.\n"
+#| "  \\item Killed enemy units do not respawn.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Fighting enemy armies over more than one Combat Round does not cost Movement Points.\n"
-"  \\item During a battle with an enemy army, a hero can retreat whenever a friendly unit is about to activate.\n"
-"    A retreating main Hero loses all remaining MPs and is returned to an allied town or settlement of their choice, keeping all remaining units.\n"
-"  \\item Retreating secondary heroes are removed from the game, but their remaining units are kept.\n"
-"  \\item Killed enemy units do not respawn.\n"
+"  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
+"    A retreating Main Hero loses all remaining MPs and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
+"  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
+"  \\item Killed enemy Units do not respawn.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -523,13 +603,21 @@ msgstr ""
 
 #. type: multicols
 #: coops/sentinels.tex:143
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is reinforced from a fixed pool of neutral units (reinforcement pool = number in brackets in the table below).\n"
+#| "  \\item At the beginning of the \\nth{2} combat round and every following round, 2 units reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 units) to continue the fight until either the player retreats or every neutral unit from the reinforcement pool is killed. \\textit{If the number of enemy units at the beginning of a round is 1 or lower, draw up to a total of 4 units (i.e., there are always 4 or 5 enemy units on the board after reinforcing, if available).}\n"
+#| "  \\item Place the reinforcing units on the enemy base line, starting from the left with the lowest initiative (\\svg{unit_ranged} units first). If necessary, continue on the next line in the same order.\n"
+#| "  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
-"  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is reinforced from a fixed pool of neutral units (reinforcement pool = number in brackets in the table below).\n"
-"  \\item At the beginning of the \\nth{2} combat round and every following round, 2 units reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 units) to continue the fight until either the player retreats or every neutral unit from the reinforcement pool is killed. \\textit{If the number of enemy units at the beginning of a round is 1 or lower, draw up to a total of 4 units (i.e., there are always 4 or 5 enemy units on the board after reinforcing, if available).}\n"
-"  \\item Place the reinforcing units on the enemy base line, starting from the left with the lowest initiative (\\svg{unit_ranged} units first). If necessary, continue on the next line in the same order.\n"
-"  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.\n"
+"  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).\n"
+"  \\item At the beginning of the \\nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \\textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the Board after Reinforcing, if available).}\n"
+"  \\item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.\n"
+"  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 Units and takes these as starting Units to the next fight.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -623,8 +711,12 @@ msgstr ""
 
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:194
+#, fuzzy
+#| msgid ""
+#| "Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is "
+#| "random\\label{azure}."
 msgid ""
-"Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is "
+"Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
 "Vždy 1 jednotka Azurových Draků (výchozí jednotky Armády Bosse). Zbytek je "
