--- a/translations/credits.tex/pl.po
+++ b/translations/credits.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -100,13 +100,13 @@ msgstr ""
 #: sections/credits.tex:22
 #, no-wrap
 msgid ""
-"\\textbf{Special thanks}: Patrick Kersten for \\href{https://zedero.github.io/HoMM3BoardgameScenarioEditor/}{Scenario map editor}.\n"
+"\\textbf{Special thanks}: Patrick Kersten for \\href{https://zedero.github.io/HoMM3BoardgameScenarioEditor/}{Scenario Map Editor}.\n"
 "Everyone from Archon Studio, for producing the game and answering our incessant queries about rules and other topics.\n"
 "Jon Van Caneghem and everyone involved with the development of the original video game.\n"
 "Everyone who has supported the project with suggestions, corrections, image resources, and words of encouragement either on Discord or BoardGameGeek.\n"
 "\n"
 msgstr ""
-"\\textbf{Specjalne podziękowania}: Patrickowi Kerstenowi za \\href{https://zedero.github.io/HoMM3BoardgameScenarioEditor/}{edytor map scenariuszy}.\n"
+"\\textbf{Specjalne podziękowania}: Patrickowi Kerstenowi za \\href{https://zedero.github.io/HoMM3BoardgameScenarioEditor/}{Edytor Map Scenariuszy}.\n"
 "Wszystkim z Archon Studio za stworzenie gry i odpowiadanie na nasze nieustanne pytania dotyczące zasad i innych tematów.\n"
 "Jonowi Van Caneghemowi i wszystkim zaangażowanym w rozwój oryginalnej gry wideo.\n"
 "Wszystkim, którzy wspierali projekt sugestiami, poprawkami, zasobami graficznymi i słowami otuchy na Discordzie lub BoardGameGeeku.\n"
