--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -30,8 +30,25 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Player Setup}}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava Hráče}}\n"
+"\n"
+
+#. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
 #: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
@@ -91,26 +108,13 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/titans_stronghold.tex:21 coops/emerald_island.tex:18
-#: campaigns/inferno_devilish_plan.tex:22
-#: campaigns/inferno_steadwicks_fall.tex:20
-#: campaigns/inferno_deal_with_the_devil.tex:24
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Player setup}}\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Příprava Hráče}}\n"
-"\n"
-
-#. type: multicols*
 #: coops/titans_stronghold.tex:33 coops/emerald_island.tex:30
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svgunit{bronze} units of your choice\n"
-"  \\item A Few \\svgunit{bronze} units of your choice\n"
+"  \\item A Pack of \\svgunit{bronze} Units of your choice\n"
+"  \\item A Few \\svgunit{bronze} Units of your choice\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -135,9 +139,9 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:43 coops/emerald_island.tex:40
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):\n"
 "\n"
 msgstr ""
 "Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři ($H$ znamená počet hráčů):\n"
@@ -181,9 +185,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:16
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "This scenario is played over 8 rounds.\n"
+#| "\n"
 msgid ""
-"This scenario is played over 8 rounds.\n"
+"This Scenario is played over 8 Rounds.\n"
 "\n"
 msgstr ""
 "Tento scénář se hraje na 8 kol.\n"
@@ -232,9 +239,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:34
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
+#| "\n"
 msgid ""
-"\\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
+"\\textbf{Map Tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
 "\n"
 msgstr ""
 "\\textbf{Dílky Mapy na ruce:} Pokud si přejete, můžete dílky II--III rozdělit rovnoměrně mezi každého hráče, místo aby byly rozmístěny podle návrhu ve scénáři.\n"
@@ -242,11 +252,18 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:46
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "$\\boldsymbol{P}$ \\textbf{× Starting (I) Map tile}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Starting Tiles of your chosen factions.\n"
+#| "  \\item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
-"$\\boldsymbol{P}$ \\textbf{× Starting (I) Map tile}\n"
+"$\\boldsymbol{P}$ \\textbf{× Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item Starting Tiles of your chosen factions.\n"
+"  \\item Starting Tiles of your chosen Factions.\n"
 "  \\item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)\n"
 "\\end{itemize}\n"
 "\n"
@@ -260,9 +277,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:48
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map tile}\n"
+#| "\n"
 msgid ""
-"$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map tile}\n"
+"$\\boldsymbol{4 P}$ \\textbf{× Far (II--III) Map Tile}\n"
 "\n"
 msgstr ""
 "$\\boldsymbol{4 H}$ \\textbf{× Vzdálený (II--III) Dílek Mapy}\n"
@@ -270,9 +290,12 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:52
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
+#| "\n"
 msgid ""
-"Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
+"Flag all Mines and Settlements. (Don't forget the Building Materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
 "\n"
 msgstr ""
 "Obsaďte všechny Doly a Osady. (Nezapomeňte na Důl na Stavební Materiály na dílku I. Každý dílek II--III obsahuje jeden Důl nebo Osadu s bojem na úrovni III.)\n"
@@ -290,11 +313,17 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:63
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{\\nth{5} Round:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Gain again the result of one field with a Black Cube.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{\\nth{5} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item Gain again the result of one field with a Black Cube.\n"
+"  \\item Gain again the result of one Field with a Black Cube.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -306,22 +335,44 @@ msgstr ""
 
 #. type: multicols*
 #: coops/emerald_island.tex:84
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
+#| "\\begin{itemize}\n"
+#| "    \\item You can't build a \\svgunit{golden} Dwelling.\n"
+#| "    \\item You can give Units to another player, even outside your turn, if one of your Heroes is:\n"
+#| "    \\begin{itemize}\n"
+#| "        \\item On the same Map tile as another player's Hero.\n"
+#| "        \\item In another player's Town.\n"
+#| "        \\item Next to another player's Hero.\n"
+#| "    \\end{itemize}\n"
+#| "    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your faction's Unit pool (even if another player has one or more of your Units). This includes units you've previously given to another player.\n"
+#| "    \\item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.\n"
+#| "    \\item For the last Mine/Settlement battle, add a \\svgunit{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
+#| "    \\item The first time you reach level IV, gain your second specialty.\n"
+#| "    \\item When you reach level IV, move your token on the level tracker to level III.\n"
+#| "    \\item Additionally, no player can:\n"
+#| "    \\begin{itemize}\n"
+#| "        \\item Attack other Heroes.\n"
+#| "        \\item Capture a Mine or Settlement that is already Flagged.\n"
+#| "    \\end{itemize}\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
 "    \\item You can't build a \\svgunit{golden} Dwelling.\n"
-"    \\item You can give Units to another player, even outside your turn, if one of your Heroes is:\n"
+"    \\item You can give Units to another player, even outside your Turn, if one of your Heroes is:\n"
 "    \\begin{itemize}\n"
-"        \\item On the same Map tile as another player's Hero.\n"
+"        \\item On the same Map Tile as another player's Hero.\n"
 "        \\item In another player's Town.\n"
 "        \\item Next to another player's Hero.\n"
 "    \\end{itemize}\n"
-"    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your faction's Unit pool (even if another player has one or more of your Units). This includes units you've previously given to another player.\n"
+"    \\item If you have no Units in your Unit Deck (after a battle or if you do not keep at least one Unit), return all your Units to your Faction's Unit pool (even if another player has one or more of your Units). This includes Units you've previously given to another player.\n"
 "    \\item When in another player's Town, you may Recruit or Reinforce their Units, either for them or for yourself. You need the other player's permission for it. Corresponding Dwellings or Citadel must be built to do so.\n"
-"    \\item For the last Mine/Settlement battle, add a \\svgunit{golden} Neutral Unit. You have unlimited turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
+"    \\item For the last Mine/Settlement battle, add a \\svgunit{golden} Neutral Unit. You have unlimited Turns for this battle. You can't use Expert Diplomacy to skip this battle!\n"
 "    \\item The first time you reach level IV, gain your second specialty.\n"
-"    \\item When you reach level IV, move your token on the level tracker to level III.\n"
+"    \\item When you reach level IV, move your Token on the level tracker to level III.\n"
 "    \\item Additionally, no player can:\n"
 "    \\begin{itemize}\n"
 "        \\item Attack other Heroes.\n"
