--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-07-04 10:47+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -30,10 +30,51 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
+#: coops/sentinels.tex:16 clash/dragoncurse_castle.tex:17
+#: campaigns/inferno_devilish_plan.tex:18
+#: campaigns/inferno_steadwicks_fall.tex:16
+#: campaigns/inferno_deal_with_the_devil.tex:20
 #, no-wrap
 msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
+"\\subsection*{\\MakeUppercase{Scenario Length}}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Délka Scénáře}}\n"
+"\n"
+
+#. type: multicols*
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Player Setup}}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava Hráče}}\n"
+"\n"
+
+#. type: multicols*
+#: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
+#: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Map Setup}}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Příprava Mapy}}\n"
+"\n"
+
+#. type: multicols*
+#: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
+#, fuzzy, no-wrap
+msgid ""
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
 "Vezměte následující Dílky Mapy a uspořádejte je, jak je uvedeno ve scénáři:\n"
@@ -80,16 +121,16 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/titans_stronghold.tex:21 coops/emerald_island.tex:18
-#: campaigns/inferno_devilish_plan.tex:22
-#: campaigns/inferno_steadwicks_fall.tex:20
-#: campaigns/inferno_deal_with_the_devil.tex:24
+#: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: campaigns/inferno_devilish_plan.tex:148
+#: campaigns/inferno_steadwicks_fall.tex:193
+#: campaigns/inferno_deal_with_the_devil.tex:173
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{Player setup}}\n"
+"\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Příprava Hráče}}\n"
+"\\subsection*{\\MakeUppercase{Dodatečná Pravidla}}\n"
 "\n"
 
 #. type: multicols*
@@ -166,22 +207,13 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:18
-#: campaigns/inferno_steadwicks_fall.tex:16
-#: campaigns/inferno_deal_with_the_devil.tex:20
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Scenario length}}\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Délka Scénáře}}\n"
-"\n"
-
-#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:20
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "This scenario plays out over 13 rounds.\n"
+#| "\n"
 msgid ""
-"This scenario plays out over 13 rounds.\n"
+"This Scenario plays out over 13 Rounds.\n"
 "\n"
 msgstr ""
 "Tento scénář se hraje na 13 kol.\n"
@@ -252,11 +284,19 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:46
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Bonus:} Choose one of the following options:\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Add a ``Slayer'' spell to your hand\n"
+#| "  \\item Add the ``Armor of Wonder'' Artifact to your hand\n"
+#| "  \\item Reinforce Magogs and gain 1 \\svg{valuables}\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{Bonus:} Choose one of the following options:\n"
 "\\begin{itemize}\n"
-"  \\item Add a ``Slayer'' spell to your hand\n"
+"  \\item Add a ``Slayer'' Spell to your hand\n"
 "  \\item Add the ``Armor of Wonder'' Artifact to your hand\n"
 "  \\item Reinforce Magogs and gain 1 \\svg{valuables}\n"
 "\\end{itemize}\n"
@@ -274,9 +314,9 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:48
 #: campaigns/inferno_steadwicks_fall.tex:48
 #: campaigns/inferno_deal_with_the_devil.tex:46
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{AI hero setup}}\n"
+"\\subsection*{\\MakeUppercase{AI Hero Setup}}\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Příprava AI Hrdiny}}\n"
@@ -304,11 +344,17 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:57
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "  \\item \\textbf{Gold Dragon Army:} A Pack of Gold Dragons, a Pack of Unicorns, a Pack of Dendroids, a Pack of Centaurs\n"
+#| "  \\item \\textbf{Ivor's Army:} A Few Elves\\footnote{In Round 9, the Few Elves in Ivor's Army are reinforced to a Pack of Elves.}, Neutral Army at the same level as your Hero level\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Gold Dragon Army:} A Pack of Gold Dragons, a Pack of Unicorns, a Pack of Dendroids, a Pack of Centaurs\n"
-"  \\item \\textbf{Ivor's Army:} A Few Elves\\footnote{In Round 9, the Few Elves in Ivor's Army are reinforced to a Pack of Elves.}, Neutral Army at the same level as your Hero level\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
+"  \\item \\textbf{Ivor's Army:} A Few Elves\\footnote{In Round 9, the Few Elves in Ivor's Army are Reinforced to a Pack of Elves.}, Neutral Army at the same Level as your Hero Level\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -330,9 +376,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:61
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
+#| "\n"
 msgid ""
-"\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
+"\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} Unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
 "\n"
 msgstr ""
 "\\textbf{Ivorův Balíček Kouzel:} 1 × karta Kouzla Přesnosti (je použita na první \\svg{unit_ranged} jednotku schopnou útoku na dálku), 1 × karta Kouzla Magický Šíp\n"
@@ -349,22 +398,17 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:65
-#: campaigns/inferno_steadwicks_fall.tex:70
-#: campaigns/inferno_deal_with_the_devil.tex:77
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Map setup}}\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Příprava Mapy}}\n"
-"\n"
-
-#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:73
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{2 × Starting (I) Map tile}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item 1 × Inferno (S6)\n"
+#| "  \\item 1 × Rampart (S4)\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
-"\\textbf{2 × Starting (I) Map tile}\n"
+"\\textbf{2 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Inferno (S6)\n"
 "  \\item 1 × Rampart (S4)\n"
@@ -380,9 +424,16 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:79
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{3 × Far (II--III) Map tile}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item \\mbox{2 × Inferno (choose from: F16--F18, \\#F10)}\n"
+#| "  \\item 1 × Rampart (choose from: F10--F12)\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
-"\\textbf{3 × Far (II--III) Map tile}\n"
+"\\textbf{3 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item \\mbox{2 × Inferno (choose from: F16--F18, \\#F10)}\n"
 "  \\item 1 × Rampart (choose from: F10--F12)\n"
@@ -398,9 +449,15 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:84
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{2 × Near (IV--V) Map tile}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item 2 × Rampart (N7, N8)\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
-"\\textbf{2 × Near (IV--V) Map tile}\n"
+"\\textbf{2 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Rampart (N7, N8)\n"
 "\\end{itemize}\n"
@@ -414,11 +471,17 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:89
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{1 × Center (VI--VII) Map tile}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item 1 × Dragon Utopia Center Map tile (C1)\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
-"\\textbf{1 × Center (VI--VII) Map tile}\n"
+"\\textbf{1 × Center (VI--VII) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Dragon Utopia Center Map tile (C1)\n"
+"  \\item 1 × Dragon Utopia Center Map Tile (C1)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -432,9 +495,9 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:91
 #: campaigns/inferno_steadwicks_fall.tex:97
 #: campaigns/inferno_deal_with_the_devil.tex:100
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{Heroes placement}}\n"
+"\\subsection*{\\MakeUppercase{Heroes Placement}}\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Umístění Hrdinů}}\n"
@@ -442,10 +505,14 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:94
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "The Enemy Hero is represented by one Rampart faction Hero model of your choice\n"
+#| "and appears in the center field of the S4 Starting Map tile.\n"
+#| "\n"
 msgid ""
-"The Enemy Hero is represented by one Rampart faction Hero model of your choice\n"
-"and appears in the center field of the S4 Starting Map tile.\n"
+"The Enemy Hero is represented by one Rampart Faction Hero model of your choice\n"
+"and appears in the center Field of the S4 Starting Map Tile.\n"
 "\n"
 msgstr ""
 "Nepřátelský Hrdina je reprezentován libovolným modelem Hrdiny Frakce Bašta\n"
@@ -454,9 +521,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:96
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "Place your Hero in the center field of the Inferno Starting Map tile.\n"
+#| "\n"
 msgid ""
-"Place your Hero in the center field of the Inferno Starting Map tile.\n"
+"Place your Hero in the center Field of the Inferno Starting Map Tile.\n"
 "\n"
 msgstr ""
 "Umístěte svého Hrdinu na středové pole Startovního Dílku Peklo.\n"
@@ -572,11 +642,17 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:140
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{\\nth{13} Round:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item At the end of the round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\textbf{\\nth{13} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item At the end of the round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
+"  \\item At the end of the Round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -588,9 +664,15 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:145
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{When you complete the scenario:}\n"
+#| "\\begin{itemize}\n"
+#| "  \\item Read: ``Congratulations! You have completed your quest to kill the fearsome beast, and can claim victory!''\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
-"\\textbf{When you complete the scenario:}\n"
+"\\textbf{When you complete the Scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item Read: ``Congratulations! You have completed your quest to kill the fearsome beast, and can claim victory!''\n"
 "\\end{itemize}\n"
@@ -603,24 +685,12 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:148
-#: campaigns/inferno_steadwicks_fall.tex:193
-#: campaigns/inferno_deal_with_the_devil.tex:173
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Additional rules}}\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Dodatečná Pravidla}}\n"
-"\n"
-
-#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:150
 #: campaigns/inferno_steadwicks_fall.tex:195
 #: campaigns/inferno_deal_with_the_devil.tex:175
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
-"During this ``Inferno'' campaign scenario, the following rules apply:\n"
+"During this ``Inferno'' Campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
 "Během tohoto scénáře kampaně \\uv{Peklo} platí následující pravidla:\n"
@@ -628,15 +698,25 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:159
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{itemize}\n"
+#| "    \\item Your Hero does not gain Experience past Level 5.\n"
+#| "    \\item The Enemy Hero does not move and only waits in their Town. They start with Walls and a Gate on their side of the Combat Board.\n"
+#| "    \\item The N7 Map tile cannot be entered until Ivor is defeated.\n"
+#| "    \\item At the Dragon Utopia location, your Hero fights the Gold Dragons Army.\n"
+#| "    \\item The ``Castle Gate'' cannot be built.\n"
+#| "    \\item If your Hero visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.\n"
+#| "\\end{itemize}\n"
+#| "\n"
 msgid ""
 "\\begin{itemize}\n"
 "    \\item Your Hero does not gain Experience past Level 5.\n"
 "    \\item The Enemy Hero does not move and only waits in their Town. They start with Walls and a Gate on their side of the Combat Board.\n"
-"    \\item The N7 Map tile cannot be entered until Ivor is defeated.\n"
+"    \\item The N7 Map Tile cannot be entered until Ivor is defeated.\n"
 "    \\item At the Dragon Utopia location, your Hero fights the Gold Dragons Army.\n"
 "    \\item The ``Castle Gate'' cannot be built.\n"
-"    \\item If your Hero visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.\n"
+"    \\item If your Hero Visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
