--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-07-04 10:47+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -31,13 +31,54 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:16 clash/dragoncurse_castle.tex:17
+#: campaigns/inferno_devilish_plan.tex:18
+#: campaigns/inferno_steadwicks_fall.tex:16
+#: campaigns/inferno_deal_with_the_devil.tex:20
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Scenario Length}}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
+"\n"
+
+#. type: multicols*
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Player Setup}}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Graczy}}\n"
+"\n"
+
+#. type: multicols*
+#: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
+#: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Map Setup}}\n"
+"\n"
+msgstr ""
+"\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
+"\n"
+
+#. type: multicols*
 #: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
 #, no-wrap
 msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Ułóż poniższe Kafelki Mapy zgodnie z układem pokazanym na mapie scenariusza:\n"
+"Ułóż poniższe Kafelki Mapy zgodnie z układem pokazanym na mapie Scenariusza:\n"
 "\n"
 
 #. type: multicols*
@@ -81,16 +122,16 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: coops/titans_stronghold.tex:21 coops/emerald_island.tex:18
-#: campaigns/inferno_devilish_plan.tex:22
-#: campaigns/inferno_steadwicks_fall.tex:20
-#: campaigns/inferno_deal_with_the_devil.tex:24
+#: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: campaigns/inferno_devilish_plan.tex:148
+#: campaigns/inferno_steadwicks_fall.tex:193
+#: campaigns/inferno_deal_with_the_devil.tex:173
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{Player setup}}\n"
+"\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Przygotowanie Graczy}}\n"
+"\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
 "\n"
 
 #. type: multicols*
@@ -167,25 +208,13 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:18
-#: campaigns/inferno_steadwicks_fall.tex:16
-#: campaigns/inferno_deal_with_the_devil.tex:20
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Scenario length}}\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Długość Scenariusza}}\n"
-"\n"
-
-#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:20
 #, no-wrap
 msgid ""
-"This scenario plays out over 13 rounds.\n"
+"This Scenario plays out over 13 Rounds.\n"
 "\n"
 msgstr ""
-"Ten scenariusz rozgrywany jest w 13 rundach.\n"
+"Ten Scenariusz rozgrywany jest w 13 Rundach.\n"
 "\n"
 
 #. type: multicols*
@@ -257,7 +286,7 @@ msgstr ""
 msgid ""
 "\\textbf{Bonus:} Choose one of the following options:\n"
 "\\begin{itemize}\n"
-"  \\item Add a ``Slayer'' spell to your hand\n"
+"  \\item Add a ``Slayer'' Spell to your hand\n"
 "  \\item Add the ``Armor of Wonder'' Artifact to your hand\n"
 "  \\item Reinforce Magogs and gain 1 \\svg{valuables}\n"
 "\\end{itemize}\n"
@@ -265,7 +294,7 @@ msgid ""
 msgstr ""
 "\\textbf{Bonus:} Wybierz jedną z następujących opcji:\n"
 "\\begin{itemize}\n"
-"  \\item Dodaj zaklęcie ,,Pogromca'' do swojej ręki\n"
+"  \\item Dodaj Zaklęcie ,,Pogromca'' do swojej ręki\n"
 "  \\item Dodaj Artefakt ,,Zbroja Cudów'' do swojej ręki\n"
 "  \\item Wzmocnij Magogi i zyskaj 1 \\svg{valuables}\n"
 "\\end{itemize}\n"
@@ -277,7 +306,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:46
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{AI hero setup}}\n"
+"\\subsection*{\\MakeUppercase{AI Hero Setup}}\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Przygotowanie AI}}\n"
@@ -309,13 +338,13 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Gold Dragon Army:} A Pack of Gold Dragons, a Pack of Unicorns, a Pack of Dendroids, a Pack of Centaurs\n"
-"  \\item \\textbf{Ivor's Army:} A Few Elves\\footnote{In Round 9, the Few Elves in Ivor's Army are reinforced to a Pack of Elves.}, Neutral Army at the same level as your Hero level\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
+"  \\item \\textbf{Ivor's Army:} A Few Elves\\footnote{In Round 9, the Few Elves in Ivor's Army are Reinforced to a Pack of Elves.}, Neutral Army at the same Level as your Hero Level\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armia Złotych Smoków:} Grupa Złotych Smoków, Grupa Jednorożców, Grupa Drzewców, Grupa Centaurów\n"
-"  \\item \\textbf{Armia Ivora:} Garstka Elfów\\footnote{W Rundzie 9 Garstka Elfów w Armii Ivara zostaje wzmocniona do Grupy.}, Neutralna Armia na poziomie twojego Bohatera\\footnote{Zob. str. 35 ,,Tabela Trudności Pola'' w Księdze Zasad, aby poznać szczegóły na temat liczby Jednostek Neutralnych, które musisz dobrać dla tej Neutralnej Armii.}\n"
+"  \\item \\textbf{Armia Ivora:} Garstka Elfów\\footnote{W Rundzie 9 Garstka Elfów w Armii Ivara zostaje Wzmocniona do Grupy.}, Neutralna Armia na poziomie twojego Bohatera\\footnote{Zob. str. 35 ,,Tabela Trudności Pola'' w Księdze Zasad, aby poznać szczegóły na temat liczby Jednostek Neutralnych, które musisz dobrać dla tej Neutralnej Armii.}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -333,10 +362,10 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:61
 #, no-wrap
 msgid ""
-"\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
+"\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} Unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Zaklęć Ivora:} 1 × Precyzja (działa na pierwszą jednostkę \\svg{unit_ranged} zdolną do wykonania ataku \\svg{unit_ranged}), 1 × Magiczna Strzała\n"
+"\\textbf{Talia Zaklęć Ivora:} 1 × Precyzja (działa na pierwszą Jednostkę \\svg{unit_ranged} zdolną do wykonania ataku \\svg{unit_ranged}), 1 × Magiczna Strzała\n"
 "\n"
 
 #. type: multicols*
@@ -350,22 +379,10 @@ msgstr ""
 "\n"
 
 #. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:65
-#: campaigns/inferno_steadwicks_fall.tex:70
-#: campaigns/inferno_deal_with_the_devil.tex:77
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Map setup}}\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Przygotowanie Mapy}}\n"
-"\n"
-
-#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:73
 #, no-wrap
 msgid ""
-"\\textbf{2 × Starting (I) Map tile}\n"
+"\\textbf{2 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 1 × Inferno (S6)\n"
 "  \\item 1 × Rampart (S4)\n"
@@ -383,7 +400,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:79
 #, no-wrap
 msgid ""
-"\\textbf{3 × Far (II--III) Map tile}\n"
+"\\textbf{3 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item \\mbox{2 × Inferno (choose from: F16--F18, \\#F10)}\n"
 "  \\item 1 × Rampart (choose from: F10--F12)\n"
@@ -401,7 +418,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:84
 #, no-wrap
 msgid ""
-"\\textbf{2 × Near (IV--V) Map tile}\n"
+"\\textbf{2 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item 2 × Rampart (N7, N8)\n"
 "\\end{itemize}\n"
@@ -417,9 +434,9 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:89
 #, no-wrap
 msgid ""
-"\\textbf{1 × Center (VI--VII) Map tile}\n"
+"\\textbf{1 × Center (VI--VII) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Dragon Utopia Center Map tile (C1)\n"
+"  \\item 1 × Dragon Utopia Center Map Tile (C1)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -435,7 +452,7 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:100
 #, no-wrap
 msgid ""
-"\\subsection*{\\MakeUppercase{Heroes placement}}\n"
+"\\subsection*{\\MakeUppercase{Heroes Placement}}\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Ustawienie Bohaterów}}\n"
@@ -445,8 +462,8 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:94
 #, no-wrap
 msgid ""
-"The Enemy Hero is represented by one Rampart faction Hero model of your choice\n"
-"and appears in the center field of the S4 Starting Map tile.\n"
+"The Enemy Hero is represented by one Rampart Faction Hero model of your choice\n"
+"and appears in the center Field of the S4 Starting Map Tile.\n"
 "\n"
 msgstr ""
 "Wrogi Bohater jest reprezentowany przez dowolną figurkę Bohatera Bastionu\n"
@@ -457,7 +474,7 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:96
 #, no-wrap
 msgid ""
-"Place your Hero in the center field of the Inferno Starting Map tile.\n"
+"Place your Hero in the center Field of the Inferno Starting Map Tile.\n"
 "\n"
 msgstr ""
 "Umieść swojego Bohatera na środkowym polu Początkowego Kafelka Mapy Inferno.\n"
@@ -577,13 +594,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{13} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item At the end of the round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
+"  \\item At the end of the Round, if both the Enemy Hero and the Gold Dragon Armies are not defeated, all is lost -- you lose!\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{13. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Na koniec rundy, jeśli nie zostaną pokonani Wrogi Bohater i Armie Złotych Smoków, wszystko stracone -- przegrywasz!\n"
+"  \\item Na koniec Rundy, jeśli nie zostaną pokonani Wrogi Bohater i Armie Złotych Smoków, wszystko stracone -- przegrywasz!\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -591,40 +608,35 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:145
 #, no-wrap
 msgid ""
-"\\textbf{When you complete the scenario:}\n"
+"\\textbf{When you complete the Scenario:}\n"
 "\\begin{itemize}\n"
 "  \\item Read: ``Congratulations! You have completed your quest to kill the fearsome beast, and can claim victory!''\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Po ukończeniu scenariusza:}\n"
+"\\textbf{Po ukończeniu Scenariusza:}\n"
 "\\begin{itemize}\n"
 "  \\item Przeczytaj: ,,Gratulacje! Udało ci się ukończyć swoją misję zabicia straszliwej bestii i możesz ogłosić zwycięstwo!''\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
-#: campaigns/inferno_devilish_plan.tex:148
-#: campaigns/inferno_steadwicks_fall.tex:193
-#: campaigns/inferno_deal_with_the_devil.tex:173
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Additional rules}}\n"
-"\n"
-msgstr ""
-"\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
-"\n"
-
-#. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:150
 #: campaigns/inferno_steadwicks_fall.tex:195
 #: campaigns/inferno_deal_with_the_devil.tex:175
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
-"During this ``Inferno'' campaign scenario, the following rules apply:\n"
+"During this ``Inferno'' Campaign Scenario, the following rules apply:\n"
 "\n"
 msgstr ""
-"W trakcie scenariusza kampanii ,,Inferno'' obowiązują następujące zasady:\n"
+"#-#-#-#-#  pl.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"W trakcie Scenariusza kampanii ,,Inferno'' obowiązują następujące zasady:\n"
+"\n"
+"#-#-#-#-#  pl.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"W trakcie Scenariusza Kampanii ,,Inferno'' obowiązują następujące zasady:\n"
+"\n"
+"#-#-#-#-#  pl.po (Homm 3BG-mission-book)  #-#-#-#-#\n"
+"W trakcie Scenariusza Kampanii ,,Inferno'' obowiązują następujące zasady:\n"
 "\n"
 
 #. type: multicols*
@@ -634,10 +646,10 @@ msgid ""
 "\\begin{itemize}\n"
 "    \\item Your Hero does not gain Experience past Level 5.\n"
 "    \\item The Enemy Hero does not move and only waits in their Town. They start with Walls and a Gate on their side of the Combat Board.\n"
-"    \\item The N7 Map tile cannot be entered until Ivor is defeated.\n"
+"    \\item The N7 Map Tile cannot be entered until Ivor is defeated.\n"
 "    \\item At the Dragon Utopia location, your Hero fights the Gold Dragons Army.\n"
 "    \\item The ``Castle Gate'' cannot be built.\n"
-"    \\item If your Hero visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.\n"
+"    \\item If your Hero Visits an Obelisk, you may Search (2) the Ability deck, the Artifact deck, or the Spell deck.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -645,9 +657,9 @@ msgstr ""
 "    \\item Twój Bohater nie zdobywa doświadczenia powyżej poziomu 5.\n"
 "    \\item Wrogi Bohater nie porusza się i jedynie czeka w swoim Mieście. Zaczyna z Murami i Bramą.\n"
 "    \\item Na Kafelek N7 nie można wejść, dopóki Ivor nie zostanie pokonany.\n"
-"    \\item W Smoczej Utopii twój bohater walczy z Armią Złotych Smoków.\n"
+"    \\item W Smoczej Utopii twój Bohater walczy z Armią Złotych Smoków.\n"
 "    \\item Nie możesz zbudować ,,Wrót Wymiarów''.\n"
-"    \\item Jeśli twój bohater odwiedzi Obelisk, możesz Przeszukać (2) talię Umiejętności, talię Artefaktów lub talię Zaklęć.\n"
+"    \\item Jeśli twój Bohater Odwiedzi Obelisk, możesz Przeszukać (2) talię Umiejętności, talię Artefaktów lub talię Zaklęć.\n"
 "\\end{itemize}\n"
 "\n"
 
