--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-07 17:45+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -77,6 +77,9 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:16 clash/dragoncurse_castle.tex:17
+#: campaigns/inferno_devilish_plan.tex:18
+#: campaigns/inferno_steadwicks_fall.tex:16
+#: campaigns/inferno_deal_with_the_devil.tex:20
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
@@ -89,14 +92,18 @@ msgstr ""
 #: coops/sentinels.tex:18
 #, no-wrap
 msgid ""
-"This scenario is played over 12 rounds.\n"
+"This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
-"Ten scenariusz jest rozgrywany w 12 rundach.\n"
+"Ten Scenariusz jest rozgrywany w 12 Rundach.\n"
 "\n"
 
 #. type: multicols*
-#: coops/sentinels.tex:20 clash/dragoncurse_castle.tex:21
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
@@ -135,21 +142,21 @@ msgstr ""
 "\\textbf{Początkowy Przychód:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
-#. type: multicols
-#: coops/sentinels.tex:32
+#. type: multicols*
+#: coops/sentinels.tex:32 clash/the_hunt.tex:29
 #, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svgunit{bronze} units with the \\textit{lowest} recruitment cost\n"
-"  \\item A Few \\svgunit{bronze} units with the \\textit{highest} recruitment cost\n"
+"  \\item A Pack of \\svgunit{bronze} Units with the \\textit{lowest} Recruitment cost\n"
+"  \\item A Few \\svgunit{bronze} Units with the \\textit{highest} Recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item Grupa \\svg{bronze} jednostek o \\textit{najniższym} koszcie rekrutacji\n"
-"  \\item Garstka \\svg{bronze} jednostek o \\textit{najwyższym} koszcie rekrutacji\n"
+"  \\item Grupa \\svg{bronze} Jednostek o \\textit{najniższym} koszcie rekrutacji\n"
+"  \\item Garstka \\svg{bronze} Jednostek o \\textit{najwyższym} koszcie rekrutacji\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -167,7 +174,7 @@ msgstr ""
 #: coops/sentinels.tex:36
 #, no-wrap
 msgid ""
-"\\textbf{Map tile Pool:} Each player takes 1 random Near (IV--V) Map tile and 1 random Far (II--III) Map tile. These tiles should not contain any Obelisks.\n"
+"\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
 "\\textbf{Pula Kafelków Mapy:} Każdy gracz losuje 1 Bliski (IV--V) Kafelek Mapy i 1 Daleki (II--III) Kafelek Mapy. Te kafelki nie powinny zawierać żadnych Obelisków.\n"
@@ -186,6 +193,9 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
 #: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
@@ -198,19 +208,19 @@ msgstr ""
 #: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
 #, no-wrap
 msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout:\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Ułóż poniższe Kafelki Mapy zgodnie z układem pokazanym na mapie scenariusza:\n"
+"Ułóż poniższe Kafelki Mapy zgodnie z układem pokazanym na mapie Scenariusza:\n"
 "\n"
 
 #. type: multicols
 #: coops/sentinels.tex:48
 #, no-wrap
 msgid ""
-"\\textbf{2 × Starting (I) Map tile}\n"
+"\\textbf{2 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item Starting Tiles of your chosen factions\n"
+"  \\item Starting Tiles of your chosen Factions\n"
 "  \\item Ignore their yellow borders\n"
 "\\end{itemize}\n"
 "\n"
@@ -226,7 +236,7 @@ msgstr ""
 #: coops/sentinels.tex:50
 #, no-wrap
 msgid ""
-"\\textbf{4 × Far (II--III) Map tile}\n"
+"\\textbf{4 × Far (II--III) Map Tile}\n"
 "\n"
 msgstr ""
 "\\textbf{4 × Daleki (II-III) Kafelek Mapy}\n"
@@ -236,9 +246,9 @@ msgstr ""
 #: coops/sentinels.tex:55
 #, no-wrap
 msgid ""
-"\\textbf{4 × Near (IV--V) Map tile}\n"
+"\\textbf{4 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item All Near Map tiles must have Obelisks\n"
+"  \\item All Near Map Tiles must have Obelisks\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -298,7 +308,7 @@ msgstr ""
 #: coops/sentinels.tex:65
 #, no-wrap
 msgid ""
-"One of your towns is captured, or a main hero is defeated in a battle (retreat doesn't count).\n"
+"One of your Towns is captured, or a Main Hero is defeated in a battle (retreat doesn't count).\n"
 "\n"
 msgstr ""
 "Jedno z Miast zostaje zdobyte lub Bohater Główny zostaje pokonany w Walce (wycofanie się nie liczy).\n"
@@ -384,6 +394,9 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:91 clash/the_hunt.tex:72
+#: campaigns/inferno_devilish_plan.tex:148
+#: campaigns/inferno_steadwicks_fall.tex:193
+#: campaigns/inferno_deal_with_the_devil.tex:173
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
@@ -397,8 +410,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.\n"
-"  \\item The hero who defeats an enemy army gains 2 \\svg{experience}.\n"
+"  \\item Players can trade resources when one of the active player's Heroes Visits a trading post or stands on a Field adjacent to an allied hero.\n"
+"  \\item The Hero who defeats an enemy army gains 2 \\svg{experience}.\n"
 "    The victorious player rolls two Treasure Dice and resolves one of them.\n"
 "  \\item Additionally, no player can:\n"
 "  \\begin{itemize}\n"
@@ -409,7 +422,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Gracze mogą handlować zasobami, gdy jeden z Bohaterów aktywnego gracza odwiedza punkt handlowy lub stoi na polu sąsiadującym z sojuszniczym Bohaterem.\n"
+"  \\item Gracze mogą handlować zasobami, gdy jeden z Bohaterów aktywnego gracza odwiedza punkt handlowy lub stoi na Polu sąsiadującym z sojuszniczym Bohaterem.\n"
 "  \\item Bohater, który pokona wrogą armię, zdobywa 2 \\svg{experience}.\n"
 "    Zwycięski gracz rzuca dwoma Kośćmi Skarbów i rozpatruje wynik jednej z nich.\n"
 "  \\item Dodatkowo żaden gracz nie może:\n"
@@ -435,8 +448,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).\n"
-"  \\item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
+"  \\item Enemy armies spawn on a random Obelisk Field (use Hero miniatures from Factions not in play).\n"
+"  \\item Determine which Obelisk Field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = North\n"
 "    \\item $+1$/$-1$ = East\n"
@@ -446,17 +459,17 @@ msgid ""
 "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
 "  Rounds 8 and 10 are entirely random.\n"
 "  \\item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
-"  \\item If there is a hero on the field where the enemy spawns, a fight starts immediately.\n"
-"  \\item Enemy armies move at the end of every turn, starting with the turn they spawned.\n"
-"  \\item Enemy armies have 3 MPs per round.\n"
+"  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
+"  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
+"  \\item Enemy armies have 3 MPs per Round.\n"
 "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
-"    Place Black cubes on any field they pass through, treating those fields as empty from that point on.\n"
+"    Place Black cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
 "  \\item If an enemy's movement could go in different directions, the players decide which way they go.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Wrogie armie pojawiają się na polu z Obeliskiem (użyj figurek bohaterów frakcji, które nie biorą udziału w grze).\n"
+"  \\item Wrogie armie pojawiają się na Polu z Obeliskiem (użyj figurek Bohaterów frakcji, które nie biorą udziału w grze).\n"
 "  \\item Określ, na którym Obelisku poprzez rzut 2 Kośćmi Ataku. Zastosuj wyniki w następujący sposób (K1/K2), przerzuć każde 0:\n"
 "  \\begin{itemize}[leftmargin=15pt]\n"
 "    \\item $+1$/$+1$ = Północ\n"
@@ -466,12 +479,12 @@ msgstr ""
 "  \\end{itemize}\n"
 "  \\item Dla bardziej zbilansowanej dystrybucji, w Rundach 7. i 9., rzuć tylko drugą Kością Ataku (K2). Dla K1, przyjmij przeciwny wynik do tego, który wypadł w poprzedniej Rundzie.\n"
 "  Rundy 8. i 10. są całkowicie losowe.\n"
-"  \\item Jeśli pole, na którym ma pojawić się wróg, nie zostało jeszcze odkryte, odwróć je i obróć według własnego uznania.\n"
-"  \\item Jeśli na polu, na którym pojawia się wróg, znajduje się Bohater, natychmiast rozpoczyna się walka.\n"
+"  \\item Jeśli Pole, na którym ma pojawić się wróg, nie zostało jeszcze odkryte, odwróć je i obróć według własnego uznania.\n"
+"  \\item Jeśli na Polu, na którym pojawia się wróg, znajduje się Bohater, natychmiast rozpoczyna się Walka.\n"
 "  \\item Wrogie armie ruszają się na końcu każdej tury, zaczynając od tury, w której się pojawiły.\n"
 "  \\item Wrogie armie mają 3 Punkty Ruchu na Rundę.\n"
 "  \\item Wrogie armie poruszają się zgodnie z opisem w Księdze Zasad (s.\\,33), ale zamiast zdobywania, niszczą wszystko na swojej drodze.\n"
-"    Umieść Czarną kostkę na każdym polu, przez które przechodzą, odtąd traktując te pola jako puste.\n"
+"    Umieść Czarną kostkę na każdym Polu, przez które przechodzą, odtąd traktując te Pola jako puste.\n"
 "  \\item Jeśli ruch armii wroga mógłby odbyć się w różnych kierunkach, gracze decydują, w którą stronę ona pójdzie.\n"
 "\\end{itemize}\n"
 "\n"
@@ -492,19 +505,19 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Fighting enemy armies over more than one Combat Round does not cost Movement Points.\n"
-"  \\item During a battle with an enemy army, a hero can retreat whenever a friendly unit is about to activate.\n"
-"    A retreating main Hero loses all remaining MPs and is returned to an allied town or settlement of their choice, keeping all remaining units.\n"
-"  \\item Retreating secondary heroes are removed from the game, but their remaining units are kept.\n"
-"  \\item Killed enemy units do not respawn.\n"
+"  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
+"    A retreating Main Hero loses all remaining MPs and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
+"  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
+"  \\item Killed enemy Units do not respawn.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Walka z wrogimi armiami przez więcej niż jedną Rundę Walki nie kosztuje Punktów Ruchu.\n"
-"  \\item Podczas walki z wrogą armią Bohater może wycofać się, gdy ma zostać aktywowana dowolna jednostka jego armii.\n"
-"    Wycofujący się główny Bohater traci wszystkie pozostałe Punkty Ruchu i wraca do wybranej przez siebie sojuszniczej miasta lub osady, zachowując wszystkie pozostałe jednostki.\n"
-"  \\item Wycofujący się pomocniczy bohaterowie są usuwani z gry, ale ich pozostałe jednostki są zachowane.\n"
-"  \\item Zabite wrogie jednostki nie odradzają się.\n"
+"  \\item Podczas Walki z wrogą armią Bohater może wycofać się, gdy ma zostać aktywowana dowolna Jednostka jego armii.\n"
+"    Wycofujący się główny Bohater traci wszystkie pozostałe Punkty Ruchu i wraca do wybranej przez siebie sojuszniczej Miasta lub osady, zachowując wszystkie pozostałe Jednostki.\n"
+"  \\item Wycofujący się Pomocniczy Bohaterowie są usuwani z gry, ale ich pozostałe Jednostki są zachowane.\n"
+"  \\item Zabite wrogie Jednostki nie odradzają się.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -523,18 +536,18 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is reinforced from a fixed pool of neutral units (reinforcement pool = number in brackets in the table below).\n"
-"  \\item At the beginning of the \\nth{2} combat round and every following round, 2 units reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 units) to continue the fight until either the player retreats or every neutral unit from the reinforcement pool is killed. \\textit{If the number of enemy units at the beginning of a round is 1 or lower, draw up to a total of 4 units (i.e., there are always 4 or 5 enemy units on the board after reinforcing, if available).}\n"
-"  \\item Place the reinforcing units on the enemy base line, starting from the left with the lowest initiative (\\svg{unit_ranged} units first). If necessary, continue on the next line in the same order.\n"
-"  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 units and takes these as starting units to the next fight.\n"
+"  \\item In Round 10, a Boss Army spawns. It is different from previous armies because it is Reinforced from a fixed pool of Neutral Units (Reinforcement pool = number in brackets in the table below).\n"
+"  \\item At the beginning of the \\nth{2} Combat Round and every following Round, 2 Units Reinforce the remaining army from the shuffled reinforcement pool (up to a maximum of 5 Units) to continue the fight until either the player retreats or every Neutral Unit from the Reinforcement pool is killed. \\textit{If the number of enemy Units at the beginning of a Round is 1 or lower, draw up to a total of 4 Units (i.e., there are always 4 or 5 enemy Units on the Board after Reinforcing, if available).}\n"
+"  \\item Place the Reinforcing Units on the enemy base line, starting from the left with the lowest Initiative (\\svg{unit_ranged} Units first). If necessary, continue on the next line in the same order.\n"
+"  \\item When a player retreats, the enemy army draws up to the ``minimum'' of 4 Units and takes these as starting Units to the next fight.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item W Rundzie 10. pojawia się Finałowa Armia. Różni się od poprzednich tym, że jest wzmocniona ustaloną pulą neutralnych jednostek (pula wzmocnień = liczba w nawiasach w tabeli poniżej).\n"
-"  \\item Na początku 2. rundy walki i w każdej kolejnej rundzie do armii dołączają 2 jednostki z potasowanej puli wzmocnień (maksymalnie do 5 jednostek), aby kontynuować walkę aż do wycofania się gracza lub zabicia każdej jednostki neutralnej z puli wzmocnień. \\textit{Jeśli liczba jednostek wroga na początku rundy wynosi 1 lub mniej, dobierz do 4 jednostek (tj. na planszy zawsze jest 4 lub 5 jednostek wroga po wzmocnieniu, jeśli są dostępne).}\n"
-"  \\item Umieść jednostki wzmacniające drugiej linii wroga, zaczynając od lewej strony od jednostek z najniższą inicjatywą (najpierw jednostki \\svg{unit_ranged}). W razie potrzeby kontynuuj na pierwszej linii w tej samej kolejności.\n"
-"  \\item Gdy gracz się wycofa, armia wroga dobiera do ,,minimum'' 4 jednostek i bierze je jako początkowe jednostki do kolejnej walki.\n"
+"  \\item W Rundzie 10. pojawia się Finałowa Armia. Różni się od poprzednich tym, że jest wzmocniona ustaloną pulą Neutralnych Jednostek (pula wzmocnień = liczba w nawiasach w tabeli poniżej).\n"
+"  \\item Na początku 2. Rundy Walki i w każdej kolejnej Rundzie do armii dołączają 2 Jednostki z potasowanej puli wzmocnień (maksymalnie do 5 Jednostek), aby kontynuować Walkę aż do wycofania się gracza lub zabicia każdej Jednostki Neutralnej z puli wzmocnień. \\textit{Jeśli liczba Jednostek wroga na początku Rundy wynosi 1 lub mniej, dobierz do 4 Jednostek (tj. na planszy zawsze jest 4 lub 5 Jednostek wroga po wzmocnieniu, jeśli są dostępne).}\n"
+"  \\item Umieść Jednostki wzmacniające drugiej linii wroga, zaczynając od lewej strony od Jednostek z najniższą Inicjatywą (najpierw Jednostki \\svg{unit_ranged}). W razie potrzeby kontynuuj na pierwszej linii w tej samej kolejności.\n"
+"  \\item Gdy gracz się wycofa, armia wroga dobiera do ,,minimum'' 4 Jednostek i bierze je jako początkowe Jednostki do kolejnej Walki.\n"
 "\\end{itemize}\n"
 
 #. type: multicols*
@@ -620,8 +633,8 @@ msgstr ""
 #. type: footnotetext{#2}
 #: coops/sentinels.tex:194
 msgid ""
-"Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is "
+"Always 1 Unit of Azure Dragons (starting Units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Zawsze 1 jednostka Błękitnych Smoków (początkowe jednostki Finałowej Armii). "
+"Zawsze 1 Jednostka Błękitnych Smoków (początkowe Jednostki Finałowej Armii). "
 "Reszta jest losowa\\label{azure}."
