--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-20 17:49+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -30,6 +30,18 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
+#: coops/sentinels.tex:20 coops/titans_stronghold.tex:21
+#: coops/emerald_island.tex:18 clash/dragoncurse_castle.tex:21
+#: campaigns/inferno_devilish_plan.tex:22
+#: campaigns/inferno_steadwicks_fall.tex:20
+#: campaigns/inferno_deal_with_the_devil.tex:24
+#, no-wrap
+msgid ""
+"\\subsection*{\\MakeUppercase{Player Setup}}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
 #: coops/sentinels.tex:26 coops/titans_stronghold.tex:27 clash/the_hunt.tex:23
 #, no-wrap
 msgid ""
@@ -40,6 +52,9 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:41
 #: coops/emerald_island.tex:38 clash/the_hunt.tex:37
+#: campaigns/inferno_devilish_plan.tex:65
+#: campaigns/inferno_steadwicks_fall.tex:70
+#: campaigns/inferno_deal_with_the_devil.tex:77
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
@@ -132,18 +147,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:19
 #, no-wrap
 msgid ""
-"This scenario is played over 16 rounds (15 on Impossible difficulty).\n"
-"\n"
-msgstr ""
-
-#. type: multicols*
-#: coops/titans_stronghold.tex:21 coops/emerald_island.tex:18
-#: campaigns/inferno_devilish_plan.tex:22
-#: campaigns/inferno_steadwicks_fall.tex:20
-#: campaigns/inferno_deal_with_the_devil.tex:24
-#, no-wrap
-msgid ""
-"\\subsection*{\\MakeUppercase{Player setup}}\n"
+"This Scenario is played over 16 Rounds (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
 
@@ -169,8 +173,8 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svgunit{bronze} units of your choice\n"
-"  \\item A Few \\svgunit{bronze} units of your choice\n"
+"  \\item A Pack of \\svgunit{bronze} Units of your choice\n"
+"  \\item A Few \\svgunit{bronze} Units of your choice\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -187,7 +191,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:37 clash/dragoncurse_castle.tex:36
 #, no-wrap
 msgid ""
-"\\textbf{Map tile Pool:} None\n"
+"\\textbf{Map Tile Pool:} None\n"
 "\n"
 msgstr ""
 
@@ -205,7 +209,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:43 coops/emerald_island.tex:40
 #, no-wrap
 msgid ""
-"Take the following Map tiles and arrange them as shown in the scenario map layout ($P$ stands for the number of players):\n"
+"Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):\n"
 "\n"
 msgstr ""
 
@@ -213,9 +217,9 @@ msgstr ""
 #: coops/titans_stronghold.tex:49
 #, no-wrap
 msgid ""
-"$\\boldsymbol{P}$ \\textbf{× Starting (I) Map tile}\n"
+"$\\boldsymbol{P}$ \\textbf{× Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
-"  \\item Starting Tiles of your chosen factions.\n"
+"  \\item Starting Tiles of your chosen Factions.\n"
 "  \\item Ignore their yellow borders.\n"
 "\\end{itemize}\n"
 "\n"
@@ -225,7 +229,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:51
 #, no-wrap
 msgid ""
-"$\\boldsymbol{2 P}$ \\textbf{× Far (II--III) Map tile}\n"
+"$\\boldsymbol{2 P}$ \\textbf{× Far (II--III) Map Tile}\n"
 "\n"
 msgstr ""
 
@@ -233,7 +237,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:53
 #, no-wrap
 msgid ""
-"$\\boldsymbol{2 P}$ \\textbf{× Near (IV--V) Map tile}\n"
+"$\\boldsymbol{2 P}$ \\textbf{× Near (IV--V) Map Tile}\n"
 "\n"
 msgstr ""
 
@@ -241,7 +245,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:55
 #, no-wrap
 msgid ""
-"$\\boldsymbol{(P + 1)}$ \\textbf{× Center (VI--VII) Map tile}\n"
+"$\\boldsymbol{(P + 1)}$ \\textbf{× Center (VI--VII) Map Tile}\n"
 "\n"
 msgstr ""
 
@@ -258,7 +262,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:62
 #, no-wrap
 msgid ""
-"Kill all units in the Titans' Stronghold (the center of tile VI--VII next to tiles I).\n"
+"Kill all Units in the Titans' Stronghold (the center of tile VI--VII next to tiles I).\n"
 "\n"
 msgstr ""
 
@@ -266,7 +270,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:66
 #, no-wrap
 msgid ""
-"There are undefeated units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).\n"
+"There are undefeated Units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
 
@@ -296,22 +300,22 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
 "  \\item Remember: the center of VI--VII tile next to all I tiles is the Titans' Stronghold.\n"
-"  \\item No one can enter the Titans' Stronghold until all other VII fields are flagged by any player.\n"
-"  \\item After defeating a level VII neutral army, instead of resolving the field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
+"  \\item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.\n"
+"  \\item After defeating a Level VII Neutral army, instead of resolving the Field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
 "    \\begin{itemize}\n"
 "      \\item Another player (your choice) gains 5\\,\\svg{gold}\n"
 "      \\item Another player (your choice) gains 2\\,\\svg{building_materials}\n"
 "      \\item Another player (your choice) gains 1\\,\\svg{valuables}\n"
 "    \\end{itemize}\n"
-"  Then, flag the VII field with a faction cube.\n"
+"  Then, flag the VII Field with a Faction cube.\n"
 "  (There is no bonus in solo play!)\n"
 "  \\item Ignore all yellow borders in I tiles.\n"
-"  \\item You can use your build token to give your resources to another player.\n"
-"  \\item Two players can use their build tokens to exchange artifacts and/or spells.\n"
-"  \\item Whenever a player visits an Obelisk, that player rolls one treasure die and one resource die, and resolves one of them.\n"
-"  \\item When all VII fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding decks to create a separate deck of Neutral Units for the Titans' Stronghold (the deck of the Titans' Stronghold is sometimes split in two because certain scenarios are otherwise impossible to implement with the cards from certain expansions).\n"
-"  \\item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold deck instead of from the Neutral Unit card decks. The units are placed on the Combat board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the units they find in the Titans' Stronghold. Any Neutral Units defeated during combat in the Titans' Stronghold are returned to their respective Neutral Unit decks instead of the Titans' Stronghold deck. Any Neutral Units surviving combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold deck. If there are not enough Unit cards in this deck, draw as many Unit cards as are available and place them on the Combat board.\n"
-"  \\item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat round, just like Combat against non-Azure tier units.\n"
+"  \\item You can use your build Token to give your resources to another player.\n"
+"  \\item Two players can use their build Tokens to exchange Artifacts and/or Spells.\n"
+"  \\item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.\n"
+"  \\item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding decks to create a separate deck of Neutral Units for the Titans' Stronghold (the deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the cards from certain expansions).\n"
+"  \\item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold deck instead of from the Neutral Unit card decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit decks instead of the Titans' Stronghold deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold deck. If there are not enough Unit cards in this deck, draw as many Unit cards as are available and place them on the Combat Board.\n"
+"  \\item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
 "  \\item Additionally, no player can:\n"
 "  \\begin{itemize}\n"
 "    \\item Attack other Heroes.\n"
